decaf_PA2/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | SEALED CLASS IDENTIFIER EXTENDS IDENTIFIER '{' FieldList '}'
  14           | SEALED CLASS IDENTIFIER '{' FieldList '}'

  15  ExtendsClause : EXTENDS IDENTIFIER
  16                |

  17  FieldList : FieldList VariableDef
  18            | FieldList FunctionDef
  19            |

  20  Formals : VariableList
  21          |

  22  VariableList : VariableList ',' Variable
  23               | Variable

  24  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  25              | Type IDENTIFIER '(' Formals ')' StmtBlock

  26  StmtBlock : '{' StmtList '}'

  27  StmtList : StmtList Stmt
  28           |

  29  Stmt : VariableDef
  30       | SimpleStmt ';'
  31       | SCOPY '(' IDENTIFIER ',' Expr ')'
  32       | IfStmt
  33       | WhileStmt
  34       | ForStmt
  35       | ReturnStmt ';'
  36       | PrintStmt ';'
  37       | BreakStmt ';'
  38       | StmtBlock
  39       | GuardedStmt
  40       | ForeachStmt

  41  ForeachStmt : FOREACH '(' BoundVariable IN Expr WHILE Expr ')' Stmt
  42              | FOREACH '(' BoundVariable IN Expr ')' Stmt

  43  BoundVariable : VAR IDENTIFIER
  44                | Type IDENTIFIER

  45  SimpleStmt : LValue '=' Expr
  46             | Call
  47             |

  48  GuardedStmt : IF '{' IfBranchList IfSubStmt '}'
  49              | IF '{' '}'

  50  IfSubStmt : Expr ':' Stmt

  51  IfBranch : Expr ':' Stmt GUARDED

  52  IfBranchList : IfBranchList IfBranch
  53               |

  54  Receiver : Expr '.'
  55           |

  56  LValue : Receiver IDENTIFIER
  57         | Expr '[' Expr ']'
  58         | VAR IDENTIFIER

  59  Call : Receiver IDENTIFIER '(' Actuals ')'

  60  Expr : LValue
  61       | Call
  62       | Constant
  63       | Expr '+' Expr
  64       | Expr '-' Expr
  65       | Expr '*' Expr
  66       | Expr '/' Expr
  67       | Expr '%' Expr
  68       | Expr EQUAL Expr
  69       | Expr NOT_EQUAL Expr
  70       | Expr '<' Expr
  71       | Expr '>' Expr
  72       | Expr LESS_EQUAL Expr
  73       | Expr GREATER_EQUAL Expr
  74       | Expr AND Expr
  75       | Expr OR Expr
  76       | '(' Expr ')'
  77       | '-' Expr
  78       | '!' Expr
  79       | READ_INTEGER '(' ')'
  80       | READ_LINE '(' ')'
  81       | THIS
  82       | NEW IDENTIFIER '(' ')'
  83       | NEW Type '[' Expr ']'
  84       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  85       | '(' CLASS IDENTIFIER ')' Expr
  86       | Expr NEWSAMEARRAY Expr
  87       | Expr JOINTARRAY Expr
  88       | Expr '[' Expr ':' Expr ']'
  89       | Expr '[' Expr ']' DEFAULT Expr
  90       | '[' Expr FOR IDENTIFIER IN Expr BoolExpr ']'
  91       | '[' Expr FOR IDENTIFIER IN Expr ']'

  92  BoolExpr : IF Expr
  93           |

  94  Constant : LITERAL
  95           | NULL
  96           | ArrayConstant

  97  ArrayConstant : '[' ConstantList ']'

  98  ConstantList : ConstantList ',' Constant
  99               |
 100               | Constant

 101  Actuals : ExprList
 102          |

 103  ExprList : ExprList ',' Expr
 104           | Expr

 105  WhileStmt : WHILE '(' Expr ')' Stmt

 106  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

 107  BreakStmt : BREAK

 108  IfStmt : IF '(' Expr ')' Stmt ElseClause

 109  ElseClause : ELSE Stmt
 110             |

 111  ReturnStmt : RETURN Expr
 112             | RETURN

 113  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 6
	.  error


state 2
	ClassDef : SEALED . CLASS IDENTIFIER EXTENDS IDENTIFIER '{' FieldList '}'  (13)
	ClassDef : SEALED . CLASS IDENTIFIER '{' FieldList '}'  (14)

	CLASS  shift 7
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (16)

	EXTENDS  shift 9
	'{'  reduce 16

	ExtendsClause  goto 10


state 7
	ClassDef : SEALED CLASS . IDENTIFIER EXTENDS IDENTIFIER '{' FieldList '}'  (13)
	ClassDef : SEALED CLASS . IDENTIFIER '{' FieldList '}'  (14)

	IDENTIFIER  shift 11
	.  error


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (15)

	IDENTIFIER  shift 12
	.  error


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 13
	.  error


state 11
	ClassDef : SEALED CLASS IDENTIFIER . EXTENDS IDENTIFIER '{' FieldList '}'  (13)
	ClassDef : SEALED CLASS IDENTIFIER . '{' FieldList '}'  (14)

	EXTENDS  shift 14
	'{'  shift 15
	.  error


state 12
	ExtendsClause : EXTENDS IDENTIFIER .  (15)

	.  reduce 15


state 13
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (19)

	.  reduce 19

	FieldList  goto 16


state 14
	ClassDef : SEALED CLASS IDENTIFIER EXTENDS . IDENTIFIER '{' FieldList '}'  (13)

	IDENTIFIER  shift 17
	.  error


state 15
	ClassDef : SEALED CLASS IDENTIFIER '{' . FieldList '}'  (14)
	FieldList : .  (19)

	.  reduce 19

	FieldList  goto 18


state 16
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (17)
	FieldList : FieldList . FunctionDef  (18)

	VOID  shift 19
	BOOL  shift 20
	INT  shift 21
	STRING  shift 22
	CLASS  shift 23
	STATIC  shift 24
	'}'  shift 25
	.  error

	VariableDef  goto 26
	Variable  goto 27
	Type  goto 28
	FunctionDef  goto 29


state 17
	ClassDef : SEALED CLASS IDENTIFIER EXTENDS IDENTIFIER . '{' FieldList '}'  (13)

	'{'  shift 30
	.  error


state 18
	ClassDef : SEALED CLASS IDENTIFIER '{' FieldList . '}'  (14)
	FieldList : FieldList . VariableDef  (17)
	FieldList : FieldList . FunctionDef  (18)

	VOID  shift 19
	BOOL  shift 20
	INT  shift 21
	STRING  shift 22
	CLASS  shift 23
	STATIC  shift 24
	'}'  shift 31
	.  error

	VariableDef  goto 26
	Variable  goto 27
	Type  goto 28
	FunctionDef  goto 29


state 19
	Type : VOID .  (7)

	.  reduce 7


state 20
	Type : BOOL .  (8)

	.  reduce 8


state 21
	Type : INT .  (6)

	.  reduce 6


state 22
	Type : STRING .  (9)

	.  reduce 9


state 23
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 32
	.  error


state 24
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (24)

	VOID  shift 19
	BOOL  shift 20
	INT  shift 21
	STRING  shift 22
	CLASS  shift 23
	.  error

	Type  goto 33


state 25
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 26
	FieldList : FieldList VariableDef .  (17)

	.  reduce 17


state 27
	VariableDef : Variable . ';'  (4)

	';'  shift 34
	.  error


state 28
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (25)

	IDENTIFIER  shift 35
	'['  shift 36
	.  error


state 29
	FieldList : FieldList FunctionDef .  (18)

	.  reduce 18


state 30
	ClassDef : SEALED CLASS IDENTIFIER EXTENDS IDENTIFIER '{' . FieldList '}'  (13)
	FieldList : .  (19)

	.  reduce 19

	FieldList  goto 37


state 31
	ClassDef : SEALED CLASS IDENTIFIER '{' FieldList '}' .  (14)

	.  reduce 14


state 32
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 33
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 38
	'['  shift 36
	.  error


state 34
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 35
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (25)

	'('  shift 39
	';'  reduce 5


state 36
	Type : Type '[' . ']'  (11)

	']'  shift 40
	.  error


state 37
	ClassDef : SEALED CLASS IDENTIFIER EXTENDS IDENTIFIER '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (17)
	FieldList : FieldList . FunctionDef  (18)

	VOID  shift 19
	BOOL  shift 20
	INT  shift 21
	STRING  shift 22
	CLASS  shift 23
	STATIC  shift 24
	'}'  shift 41
	.  error

	VariableDef  goto 26
	Variable  goto 27
	Type  goto 28
	FunctionDef  goto 29


state 38
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 42
	.  error


state 39
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (25)
	Formals : .  (21)

	VOID  shift 19
	BOOL  shift 20
	INT  shift 21
	STRING  shift 22
	CLASS  shift 23
	')'  reduce 21

	Variable  goto 43
	Type  goto 44
	Formals  goto 45
	VariableList  goto 46


state 40
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 41
	ClassDef : SEALED CLASS IDENTIFIER EXTENDS IDENTIFIER '{' FieldList '}' .  (13)

	.  reduce 13


state 42
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (21)

	VOID  shift 19
	BOOL  shift 20
	INT  shift 21
	STRING  shift 22
	CLASS  shift 23
	')'  reduce 21

	Variable  goto 43
	Type  goto 44
	Formals  goto 47
	VariableList  goto 46


state 43
	VariableList : Variable .  (23)

	.  reduce 23


state 44
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 48
	'['  shift 36
	.  error


state 45
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (25)

	')'  shift 49
	.  error


state 46
	Formals : VariableList .  (20)
	VariableList : VariableList . ',' Variable  (22)

	','  shift 50
	')'  reduce 20


state 47
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 51
	.  error


state 48
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 49
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (25)

	'{'  shift 52
	.  error

	StmtBlock  goto 53


state 50
	VariableList : VariableList ',' . Variable  (22)

	VOID  shift 19
	BOOL  shift 20
	INT  shift 21
	STRING  shift 22
	CLASS  shift 23
	.  error

	Variable  goto 54
	Type  goto 44


state 51
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 52
	.  error

	StmtBlock  goto 55


state 52
	StmtBlock : '{' . StmtList '}'  (26)
	StmtList : .  (28)

	.  reduce 28

	StmtList  goto 56


state 53
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (25)

	.  reduce 25


state 54
	VariableList : VariableList ',' Variable .  (22)

	.  reduce 22


state 55
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 56
	StmtBlock : '{' StmtList . '}'  (26)
	StmtList : StmtList . Stmt  (27)
	SimpleStmt : .  (47)
	Receiver : .  (55)

	VOID  shift 19
	BOOL  shift 20
	INT  shift 21
	STRING  shift 22
	CLASS  shift 23
	NULL  shift 57
	THIS  shift 58
	WHILE  shift 59
	FOR  shift 60
	IF  shift 61
	RETURN  shift 62
	BREAK  shift 63
	NEW  shift 64
	PRINT  shift 65
	READ_INTEGER  shift 66
	READ_LINE  shift 67
	LITERAL  shift 68
	INSTANCEOF  shift 69
	SCOPY  shift 70
	FOREACH  shift 71
	'-'  shift 72
	'!'  shift 73
	'('  shift 74
	'['  shift 75
	'{'  shift 52
	'}'  shift 76
	VAR  shift 77
	IDENTIFIER  reduce 55
	';'  reduce 47

	VariableDef  goto 78
	Variable  goto 27
	Type  goto 44
	StmtBlock  goto 79
	Stmt  goto 80
	SimpleStmt  goto 81
	Expr  goto 82
	IfStmt  goto 83
	WhileStmt  goto 84
	ForStmt  goto 85
	ReturnStmt  goto 86
	PrintStmt  goto 87
	BreakStmt  goto 88
	GuardedStmt  goto 89
	ForeachStmt  goto 90
	LValue  goto 91
	Call  goto 92
	Receiver  goto 93
	Constant  goto 94
	ArrayConstant  goto 95


state 57
	Constant : NULL .  (95)

	.  reduce 95


state 58
	Expr : THIS .  (81)

	.  reduce 81


state 59
	WhileStmt : WHILE . '(' Expr ')' Stmt  (105)

	'('  shift 96
	.  error


state 60
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (106)

	'('  shift 97
	.  error


state 61
	GuardedStmt : IF . '{' IfBranchList IfSubStmt '}'  (48)
	GuardedStmt : IF . '{' '}'  (49)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (108)

	'('  shift 98
	'{'  shift 99
	.  error


state 62
	ReturnStmt : RETURN . Expr  (111)
	ReturnStmt : RETURN .  (112)
	Receiver : .  (55)

	NULL  shift 57
	THIS  shift 58
	NEW  shift 64
	READ_INTEGER  shift 66
	READ_LINE  shift 67
	LITERAL  shift 68
	INSTANCEOF  shift 69
	'-'  shift 72
	'!'  shift 73
	'('  shift 74
	'['  shift 75
	VAR  shift 77
	IDENTIFIER  reduce 55
	';'  reduce 112

	Expr  goto 100
	LValue  goto 101
	Call  goto 102
	Receiver  goto 93
	Constant  goto 94
	ArrayConstant  goto 95


state 63
	BreakStmt : BREAK .  (107)

	.  reduce 107

